--- a/photonVoodooComm/package.json
+++ b/photonVoodooComm/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "readline": "^1.3.0"
   }
 }
