--- a/photonVoodooComm/package.json
+++ b/photonVoodooComm/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.4",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "socket.io": "^1.4.5"
   }
 }
